--- a/Opacidad/Opacidad.csproj
+++ b/Opacidad/Opacidad.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>assets\opacidad.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -102,6 +105,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="assets\episodioVI.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\opacidad.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
